[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shutter-control"
version = "0.1.0"
description = "EnOcean-to-MQTT bridge for Eltako FSB61NP-230V roller shutters"
requires-python = ">=3.11"
dependencies = [
    "enocean>=0.60",
    "paho-mqtt>=2.0,<3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
shutter-control = "shutter_control.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
